hphp/test/zend/bad/ext/standard/tests/array/bug48484.php
<?php
var_dump(array_product(array()));
?>